--- a/app/src/main/res/layout/activity_tela_inicio.xml
+++ b/app/src/main/res/layout/activity_tela_inicio.xml
@@ -1,47 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_tela_inicio"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ftfnunes.booknet.telaInicio">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <Button
-        android:text="Anunciar"
+    <include
+        layout="@layout/app_bar_tela_inicio"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="144dp"
-        android:id="@+id/inicioBotaoAnunciar"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:elevation="24dp"
-        android:onClick="setTelaAnunciar" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_menu_lateral"
+        app:menu="@menu/activity_menu_lateral_drawer" />
 
-    <Button
-        android:text="Procurar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/inicioBotaoAnunciar"
-        android:layout_marginTop="90dp"
-        android:id="@+id/inicioBotaoProcurar"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:onClick="setTelaProcurar"
-        android:elevation="24dp" />
-
-    <Button
-        android:text="Menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/botaoMenuInicio"
-        android:onClick="setMenu" />
-
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
