--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -10,8 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ftfnunes.booknet.telaLogin"
-    tools:showIn="@layout/activity_tela_login">
+    tools:context="com.example.ftfnunes.booknet.telaLogin">
 
     <EditText
         android:layout_width="wrap_content"
