--- a/app/src/main/res/layout/content_tela_busca.xml
+++ b/app/src/main/res/layout/content_tela_busca.xml
@@ -27,6 +27,13 @@
         android:layout_alignParentStart="true" />
 
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_below="@+id/imageButton4"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="17dp" />
+
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,17 +41,5 @@
         android:id="@+id/imageButton4"
         android:layout_alignBottom="@+id/editText"
         android:layout_toEndOf="@+id/editText" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="11dp">
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
 
 </RelativeLayout>
