--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/textAutor"
-        android:layout_width="270dp"
-        android:layout_height="26dip"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:text="Description"
-        android:textSize="12sp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textTitulo" />
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
 
-    <ImageView
-        android:layout_width="70dp"
-        android:layout_height="fill_parent"
-        app:srcCompat="@drawable/ic_menu_camera"
-        android:id="@+id/imageLivro"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+            <ImageView
+                android:id="@+id/imageLivroList"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                app:srcCompat="@drawable/ic_menu_camera"
+                android:adjustViewBounds="true" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/textTitulo"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_alignWithParentIfMissing="true"
-        android:gravity="center_vertical"
-        android:text="Example application"
-        android:textSize="16sp"
-        android:layout_marginStart="14dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageLivro" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
 
-</RelativeLayout>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+            <TextView
+                android:id="@+id/textTituloList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/textAutorList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
