--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -61,7 +61,8 @@
         android:id="@+id/botaoRegistrarLogin"
         android:layout_below="@+id/botaoEntrarLogin"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="registro" />
 
     <ImageButton
         app:srcCompat="@android:drawable/ic_lock_power_off"
