--- a/app/src/main/res/layout/content_tela_busca.xml
+++ b/app/src/main/res/layout/content_tela_busca.xml
@@ -17,7 +17,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="380dp"
-        android:layout_below="@+id/imageButton4"
+        android:layout_below="@+id/searchButton"
         android:layout_alignParentStart="true"
         android:layout_marginTop="17dp"
         android:id="@+id/anunciosList" />
@@ -38,20 +38,20 @@
         android:layout_height="50dp"
         app:srcCompat="@mipmap/filter"
         android:background="@android:color/transparent"
-        android:id="@+id/imageButton2"
+        android:id="@+id/filterButton"
         android:layout_marginEnd="22dp"
         android:layout_alignTop="@+id/editText"
-        android:layout_toStartOf="@+id/imageButton4" />
+        android:layout_toStartOf="@+id/searchButton" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         app:srcCompat="@mipmap/search"
-        android:id="@+id/imageButton4"
+        android:id="@+id/searchButton"
 
         android:background="@android:color/transparent"
         android:layout_marginEnd="14dp"
-        android:layout_alignTop="@+id/imageButton2"
+        android:layout_alignTop="@+id/filterButton"
         android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
