--- a/app/src/main/res/layout/content_tela_anuncio.xml
+++ b/app/src/main/res/layout/content_tela_anuncio.xml
@@ -80,7 +80,8 @@
             android:id="@+id/botaoEnviarAnuncio"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:background="@android:color/holo_green_dark" />
+            android:background="@android:color/holo_green_dark"
+            android:onClick="anunciar" />
     </RelativeLayout>
 
 </RelativeLayout>
