--- a/app/src/main/res/layout/content_tela_registro.xml
+++ b/app/src/main/res/layout/content_tela_registro.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText6"
+            android:id="@+id/nomeRegistro"
             android:hint="Nome"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -48,9 +48,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/loginRegistro"
             android:hint="Login"
-            android:layout_below="@+id/editText6"
+            android:layout_below="@+id/nomeRegistro"
             android:layout_alignParentStart="true"
             android:layout_marginTop="12dp"
             android:layout_alignParentEnd="true" />
@@ -60,9 +60,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editText3"
+            android:id="@+id/senhaRegistro"
             android:hint="Senha"
-            android:layout_below="@+id/editText2"
+            android:layout_below="@+id/loginRegistro"
             android:layout_alignParentStart="true"
             android:layout_marginTop="16dp"
             android:layout_alignParentEnd="true" />
@@ -84,9 +84,9 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText4"
+            android:id="@+id/emailRegistro"
             android:hint="E-mail"
-            android:layout_below="@+id/editText3"
+            android:layout_below="@+id/senhaRegistro"
             android:layout_alignParentStart="true"
             android:layout_marginTop="21dp"
             android:layout_alignParentEnd="true" />
@@ -96,9 +96,9 @@
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:ems="10"
-            android:id="@+id/editText5"
+            android:id="@+id/telRegistro"
             android:hint="Telefone"
-            android:layout_below="@+id/editText4"
+            android:layout_below="@+id/emailRegistro"
             android:layout_alignParentStart="true"
             android:layout_marginTop="15dp"
             android:layout_alignParentEnd="true" />
