--- a/app/src/main/res/layout/content_tela_atividades.xml
+++ b/app/src/main/res/layout/content_tela_atividades.xml
@@ -13,5 +13,21 @@
     tools:context="com.example.ftfnunes.booknet.TelaAtividades"
     tools:showIn="@layout/app_bar_tela_atividades">
 
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/tab_layout"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
