--- a/app/src/main/res/layout/activity_aprovacao_de_solicitacao.xml
+++ b/app/src/main/res/layout/activity_aprovacao_de_solicitacao.xml
@@ -1,145 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_aprovacao_de_solicitacao"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ftfnunes.booknet.AprovacaoDeSolicitacao">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <TextView
-        android:text="Autor"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:id="@+id/textAutor"
-        android:layout_below="@+id/TituloText"
-        android:layout_alignStart="@+id/TituloText"
-        android:layout_marginTop="12dp" />
+    <include
+        layout="@layout/app_bar_aprovacao_de_solicitacao"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <TextView
-        android:text="Edição"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:id="@+id/textGenero"
-        android:layout_below="@+id/textAutor"
-        android:layout_alignStart="@+id/textAutor"
-        android:layout_marginTop="13dp" />
-
-    <TextView
-        android:text="Nome Do Usuário"
-        android:layout_height="30dp"
-        android:id="@+id/textNomeUsuario"
-        android:layout_alignTop="@+id/imageUsuario"
-        android:layout_alignStart="@+id/textGenero"
-        android:layout_alignEnd="@+id/buttonRecusar"
-        android:layout_width="150dp" />
-
-    <TextView
-        android:text="Telefone"
-        android:layout_height="30dp"
-        android:id="@+id/textTelefone"
-        android:layout_width="150dp"
-        android:layout_marginTop="14dp"
-        android:layout_below="@+id/textNomeUsuario"
-        android:layout_alignStart="@+id/textNomeUsuario" />
-
-    <ImageView
-        android:layout_width="120dp"
-        app:srcCompat="@drawable/ic_menu_camera"
-        android:id="@+id/imageUsuario"
-        android:layout_height="120dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignStart="@+id/buttonAceitar" />
-
-    <TextView
-        android:text="Nome Do Livro"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:id="@+id/TituloText"
-        android:layout_alignTop="@+id/imageLivro"
-        android:layout_alignEnd="@+id/buttonRecusar" />
-
-    <TextView
-        android:text="Livro Disponibilizado:"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/imageLivro"
-        android:id="@+id/textView9" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_menu_lateral"
+        app:menu="@menu/activity_menu_lateral_drawer" />
 
-    <TextView
-        android:text="Usuário que solicitou:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_marginTop="31dp"
-        android:layout_below="@+id/imageLivro"
-        android:layout_alignStart="@+id/imageUsuario" />
-
-    <ImageView
-        android:layout_width="120dp"
-        app:srcCompat="@drawable/ic_menu_camera"
-        android:id="@+id/imageLivro"
-        android:layout_height="120dp"
-        android:layout_below="@+id/textView9"
-        android:layout_alignStart="@+id/textView2" />
-
-    <Button
-        android:id="@+id/buttonChat"
-        android:text="Chat"
-        android:layout_below="@+id/textTelefone"
-        android:layout_alignStart="@+id/textTelefone"
-        android:layout_width="65dp"
-        android:layout_height="35dp" />
-
-    <ImageView
-        android:layout_width="35dp"
-        app:srcCompat="@drawable/ic_chat"
-        android:id="@+id/imageChat"
-        android:layout_height="35dp"
-        android:layout_below="@+id/textTelefone"
-        android:layout_toEndOf="@+id/buttonChat" />
-
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ratingBar2"
-        android:layout_below="@+id/imageUsuario"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:text="Recusar"
-        android:id="@+id/buttonRecusar"
-        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:layout_width="160dp"
-        android:layout_height="70dp"
-        android:layout_alignTop="@+id/buttonAceitar"
-        android:layout_alignBottom="@+id/buttonAceitar"
-        android:layout_toEndOf="@+id/buttonAceitar" />
-
-    <Button
-        android:text="Verificar Reputação"
-        android:layout_height="35dp"
-        android:id="@+id/buttonReputacao"
-        android:layout_width="180dp"
-        android:layout_below="@+id/ratingBar2"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:text="Aceitar"
-        android:layout_height="70dp"
-        android:id="@+id/buttonAceitar"
-        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-        android:backgroundTint="@android:color/holo_green_light"
-        android:layout_width="160dp"
-        android:layout_marginStart="17dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
