Tela de atividades e tela de solicitar emprestimo pronta

--- a/app/src/main/res/layout/fragment_atividades_disponibilizei.xml
+++ b/app/src/main/res/layout/fragment_atividades_disponibilizei.xml
@@ -5,10 +5,9 @@
     tools:context="com.example.ftfnunes.booknet.AtividadesDisponibilizeiFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/disponibilizeiList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tela disponibilizei"
-        android:id="@+id/textView4" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
