--- a/app/src/main/res/layout/content_tela_atividades.xml
+++ b/app/src/main/res/layout/content_tela_atividades.xml
@@ -23,11 +23,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/tab_layout"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/atList"/>
+
 
 </RelativeLayout>
