--- a/app/src/main/res/layout/fragment_atividades_solicitei.xml
+++ b/app/src/main/res/layout/fragment_atividades_solicitei.xml
@@ -5,10 +5,10 @@
     tools:context="com.example.ftfnunes.booknet.AtividadesSoliciteiFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tela Solicitei"
-        android:id="@+id/textView4" />
 
+
+    <ListView
+        android:id="@+id/soliciteiList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
