--- a/app/src/main/res/layout/content_tela_anuncio.xml
+++ b/app/src/main/res/layout/content_tela_anuncio.xml
@@ -29,37 +29,16 @@
             android:background="@android:color/holo_green_dark"
             android:onClick="anunciar" />
 
-        <ImageView
-            android:layout_width="80pt"
-            android:editable="true"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/imageView2"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/botaoTirarFotoAnuncio"
-            android:layout_alignBottom="@+id/botaoEscolherFoto" />
-
         <Button
             android:text="Escolher foto"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/botaoEscolherFoto"
             android:background="@android:color/holo_red_dark"
-            android:layout_above="@+id/botaoEnviarAnuncio"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="23dp"
-            android:layout_toEndOf="@+id/imageView2" />
-
-        <Button
-            android:text="Tirar foto"
-            android:layout_width="wrap_content"
+            android:layout_toEndOf="@+id/previewFotoAnuncio"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:id="@+id/botaoTirarFotoAnuncio"
-            android:background="@color/colorPrimary"
-            android:layout_alignBottom="@+id/botaoEscolherFoto"
-            android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@+id/imageView2" />
+            android:layout_alignTop="@+id/previewFotoAnuncio"
+            android:layout_alignBottom="@+id/previewFotoAnuncio" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -111,6 +90,16 @@
             android:layout_below="@+id/generoLivroAnuncio"
             android:layout_alignParentStart="true"
             android:hint="Edição" />
+
+        <ImageView
+            android:layout_width="80pt"
+            android:editable="true"
+            app:srcCompat="@mipmap/ic_launcher"
+            android:id="@+id/previewFotoAnuncio"
+            android:layout_height="45pt"
+            android:layout_above="@+id/botaoEnviarAnuncio"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="39dp" />
     </RelativeLayout>
 
 </RelativeLayout>
