--- a/app/src/main/res/layout/content_livro_emprestado.xml
+++ b/app/src/main/res/layout/content_livro_emprestado.xml
@@ -23,6 +23,15 @@
         android:layout_marginTop="12dp" />
 
     <TextView
+        android:text="Edição"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:id="@+id/textGenero"
+        android:layout_below="@+id/textAutor"
+        android:layout_alignStart="@+id/textAutor"
+        android:layout_marginTop="13dp" />
+
+    <TextView
         android:text="Nome Do Usuário"
         android:layout_height="30dp"
         android:id="@+id/textNomeUsuario"
@@ -117,13 +126,5 @@
         android:layout_height="35dp"
         android:layout_below="@+id/textTelefone"
         android:layout_toEndOf="@+id/buttonChat" />
-
-    <TextView
-        android:text="Edição"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:id="@+id/textGenero"
-        android:layout_alignBottom="@+id/imageLivro"
-        android:layout_alignStart="@+id/textAutor" />
 
 </RelativeLayout>
