--- a/app/src/main/res/menu/activity_menu_lateral_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_lateral_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/men_lat_not"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Notificações" />
+            android:title="Atividades" />
         <item
             android:id="@+id/men_lat_myprof"
             android:icon="@drawable/ic_menu_slideshow"
@@ -18,10 +18,6 @@
             android:id="@+id/men_lat_hist"
             android:icon="@drawable/ic_menu_manage"
             android:title="Histórico" />
-        <item
-            android:id="@+id/men_lat_solic"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Solicitações" />
         <item
             android:id="@+id/men_lat_chat"
             android:icon="@drawable/ic_menu_manage"
